--- a/README.textile
+++ b/README.textile
@@ -155,6 +155,8 @@ Russian::strftime
 
 Russian::strftime(Time.now)
 => "Пн, 01 сент. 2008, 11:12:43 +0300"
+Russian::strftime(Time.now, "%d %B")
+>> "01 сентября"
 Russian::strftime(Time.now, "%B")
 => "Сентябрь"
 </code></pre>
