--- a/README.textile
+++ b/README.textile
@@ -28,7 +28,7 @@ h2. Что такое I18n
 
 h1. Требования
 
-* Ruby 1.8 (тестировалось на 1.8.7);
+* Ruby 1.8.7 (совместимость с Ruby 1.9 и JRuby);
 * Для использования с Rails нужна версия не ниже 2.2, желательно -- 2.3.5;
 * Для тестирования библиотеки вам понадобится RSpec.
 
