--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -77,60 +77,60 @@ ru:
     distance_in_words:
       half_a_minute: "меньше минуты"
       less_than_x_seconds:
-        one:   "меньше {{count}} секунды"
-        few:   "меньше {{count}} секунд"
-        many:  "меньше {{count}} секунд"
-        other: "меньше {{count}} секунды"
+        one:   "меньше %{count} секунды"
+        few:   "меньше %{count} секунд"
+        many:  "меньше %{count} секунд"
+        other: "меньше %{count} секунды"
       x_seconds:
-        one:   "{{count}} секунда"
-        few:   "{{count}} секунды"
-        many:  "{{count}} секунд"
-        other: "{{count}} секунды"
+        one:   "%{count} секунда"
+        few:   "%{count} секунды"
+        many:  "%{count} секунд"
+        other: "%{count} секунды"
       less_than_x_minutes:
-        one:   "меньше {{count}} минуты"
-        few:   "меньше {{count}} минут"
-        many:  "меньше {{count}} минут"
-        other: "меньше {{count}} минуты"
+        one:   "меньше %{count} минуты"
+        few:   "меньше %{count} минут"
+        many:  "меньше %{count} минут"
+        other: "меньше %{count} минуты"
       x_minutes:
-        one:   "{{count}} минуту"
-        few:   "{{count}} минуты"
-        many:  "{{count}} минут"
-        other: "{{count}} минуты"
+        one:   "%{count} минуту"
+        few:   "%{count} минуты"
+        many:  "%{count} минут"
+        other: "%{count} минуты"
       about_x_hours:
-        one:   "около {{count}} часа"
-        few:   "около {{count}} часов"
-        many:  "около {{count}} часов"
-        other: "около {{count}} часа"
+        one:   "около %{count} часа"
+        few:   "около %{count} часов"
+        many:  "около %{count} часов"
+        other: "около %{count} часа"
       x_days:
-        one:   "{{count}} день"
-        few:   "{{count}} дня"
-        many:  "{{count}} дней"
-        other: "{{count}} дня"
+        one:   "%{count} день"
+        few:   "%{count} дня"
+        many:  "%{count} дней"
+        other: "%{count} дня"
       about_x_months:
-        one:   "около {{count}} месяца"
-        few:   "около {{count}} месяцев"
-        many:  "около {{count}} месяцев"
-        other: "около {{count}} месяца"
+        one:   "около %{count} месяца"
+        few:   "около %{count} месяцев"
+        many:  "около %{count} месяцев"
+        other: "около %{count} месяца"
       x_months:
-        one:   "{{count}} месяц"
-        few:   "{{count}} месяца"
-        many:  "{{count}} месяцев"
-        other: "{{count}} месяца"
+        one:   "%{count} месяц"
+        few:   "%{count} месяца"
+        many:  "%{count} месяцев"
+        other: "%{count} месяца"
       about_x_years:
-        one:   "около {{count}} года"
-        few:   "около {{count}} лет"
-        many:  "около {{count}} лет"
-        other: "около {{count}} лет"
+        one:   "около %{count} года"
+        few:   "около %{count} лет"
+        many:  "около %{count} лет"
+        other: "около %{count} лет"
       over_x_years:
-        one:   "больше {{count}} года"
-        few:   "больше {{count}} лет"
-        many:  "больше {{count}} лет"
-        other: "больше {{count}} лет"
+        one:   "больше %{count} года"
+        few:   "больше %{count} лет"
+        many:  "больше %{count} лет"
+        other: "больше %{count} лет"
       almost_x_years:
-        one:   "почти {{count}} год"
-        few:   "почти {{count}} года"
-        many:  "почти {{count}} лет"
-        other: "почти {{count}} лет"
+        one:   "почти %{count} год"
+        few:   "почти %{count} года"
+        many:  "почти %{count} лет"
+        other: "почти %{count} лет"
     prompts:
       year:   "Год"
       month:  "Месяц"
@@ -145,12 +145,12 @@ ru:
       template:
         # Заголовок сообщения об ошибке
         header:
-          one:   "{{model}}: сохранение не удалось из-за {{count}} ошибки"
-          few:   "{{model}}: сохранение не удалось из-за {{count}} ошибок"
-          many:  "{{model}}: сохранение не удалось из-за {{count}} ошибок"
-          other: "{{model}}: сохранение не удалось из-за {{count}} ошибки"
+          one:   "%{model}: сохранение не удалось из-за {{count}} ошибки"
+          few:   "%{model}: сохранение не удалось из-за {{count}} ошибок"
+          many:  "%{model}: сохранение не удалось из-за {{count}} ошибок"
+          other: "%{model}: сохранение не удалось из-за {{count}} ошибки"
 
-        # Первый параграф сообщения об ошибке. Можно использовать макрос {{count}}
+        # Первый параграф сообщения об ошибке. Можно использовать макрос %{count}
         #
         #
         # The variable :count is also available
