--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -2,8 +2,8 @@ ru:
   activerecord:
     # Сообщения об ошибке (валидации) ActiveRecord
     errors:
-      # Для всех сообщений доступны макросы {{model}}, {{attribute}}, {{value}}.
-      # Для некоторых доступен макрос {{count}} -- в этом случае можно задать несколько вариантов
+      # Для всех сообщений доступны макросы %{model}, {{attribute}}, {{value}}.
+      # Для некоторых доступен макрос %{count} -- в этом случае можно задать несколько вариантов
       # сообщения (плюрализация)
       #
       # Также можно использовать сообщения, начинающиеся с "^" -- в этом случае
@@ -24,33 +24,33 @@ ru:
         empty: "не может быть пустым"
         blank: "не может быть пустым"
         too_long:
-          one:   "слишком большой длины (не может быть больше чем {{count}} символ)"
-          few:   "слишком большой длины (не может быть больше чем {{count}} символа)"
-          many:  "слишком большой длины (не может быть больше чем {{count}} символов)"
-          other: "слишком большой длины (не может быть больше чем {{count}} символа)"
+          one:   "слишком большой длины (не может быть больше чем %{count} символ)"
+          few:   "слишком большой длины (не может быть больше чем %{count} символа)"
+          many:  "слишком большой длины (не может быть больше чем %{count} символов)"
+          other: "слишком большой длины (не может быть больше чем %{count} символа)"
         too_short:
-          one:   "недостаточной длины (не может быть меньше {{count}} символа)"
-          few:   "недостаточной длины (не может быть меньше {{count}} символов)"
-          many:  "недостаточной длины (не может быть меньше {{count}} символов)"
-          other: "недостаточной длины (не может быть меньше {{count}} символа)"
+          one:   "недостаточной длины (не может быть меньше %{count} символа)"
+          few:   "недостаточной длины (не может быть меньше %{count} символов)"
+          many:  "недостаточной длины (не может быть меньше %{count} символов)"
+          other: "недостаточной длины (не может быть меньше %{count} символа)"
         wrong_length:
-          one:   "неверной длины (может быть длиной ровно {{count}} символ)"
-          few:   "неверной длины (может быть длиной ровно {{count}} символа)"
-          many:  "неверной длины (может быть длиной ровно {{count}} символов)"
-          other: "неверной длины (может быть длиной ровно {{count}} символа)"
+          one:   "неверной длины (может быть длиной ровно %{count} символ)"
+          few:   "неверной длины (может быть длиной ровно %{count} символа)"
+          many:  "неверной длины (может быть длиной ровно %{count} символов)"
+          other: "неверной длины (может быть длиной ровно %{count} символа)"
         taken: "уже существует"
         not_a_number: "не является числом"
-        greater_than: "может иметь лишь значение большее {{count}}"
-        greater_than_or_equal_to: "может иметь лишь значение большее или равное {{count}}"
-        equal_to: "может иметь лишь значение, равное {{count}}"
-        less_than: "может иметь лишь значение меньшее чем {{count}}"
-        less_than_or_equal_to: "может иметь значение меньшее или равное {{count}}"
+        greater_than: "может иметь лишь значение большее %{count}"
+        greater_than_or_equal_to: "может иметь лишь значение большее или равное %{count}"
+        equal_to: "может иметь лишь значение, равное %{count}"
+        less_than: "может иметь лишь значение меньшее чем %{count}"
+        less_than_or_equal_to: "может иметь значение меньшее или равное %{count}"
         odd: "может иметь лишь четное значение"
         even: "может иметь лишь нечетное значение"
-        record_invalid: "Возникли ошибки: {{errors}}"
+        record_invalid: "Возникли ошибки: %{errors}"
 
       full_messages:
-        format: "{{attribute}} {{message}}"
+        format: "%{attribute} {{message}}"
 
         # Можно добавить собственные сообщения об ошибке тут или задавать их в контексте атрибута.
         #
@@ -62,15 +62,15 @@ ru:
         #   models:
         #     user:
         #       # Задает сообщение об ошибке (пустое значение) для атрибутов модели User
-        #       # Можно использовать макросы {{model}}, {{attribute}}.
+        #       # Можно использовать макросы %{model}, {{attribute}}.
         #       # Также можно использовать сообщения, начинающиеся с "^" -- в этом случае
         #       # в списке ошибок валидации перед конкретным сообщением не будет выводиться имя атрибута.
-        #       blank: "собственное сообщение об ошибке (пустой атрибут) для модели {{model}} и атрибута {{attribute}}"
+        #       blank: "собственное сообщение об ошибке (пустой атрибут) для модели %{model} и атрибута {{attribute}}"
         #       attributes:
         #         # Также можно задавать собственные сообщения об ошибке для конкретных атрибутов модели.
         #         # Ниже определим собственное сообщение об ошибке для атрибута name модели User.
         #         name:
-        #           blank: "Атрибут {{attribute}} особенный -- у него свое сообщение об ошибке при пустом атрибуте"
+        #           blank: "Атрибут %{attribute} особенный -- у него свое сообщение об ошибке при пустом атрибуте"
       models:
 
     # Перевод названий моделей. Используется в Model.human_name().
