More replace deprecated {{foo}} syntax with %{foo}

--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -145,10 +145,10 @@ ru:
       template:
         # Заголовок сообщения об ошибке
         header:
-          one:   "%{model}: сохранение не удалось из-за {{count}} ошибки"
-          few:   "%{model}: сохранение не удалось из-за {{count}} ошибок"
-          many:  "%{model}: сохранение не удалось из-за {{count}} ошибок"
-          other: "%{model}: сохранение не удалось из-за {{count}} ошибки"
+          one:   "%{model}: сохранение не удалось из-за %{count} ошибки"
+          few:   "%{model}: сохранение не удалось из-за %{count} ошибок"
+          many:  "%{model}: сохранение не удалось из-за %{count} ошибок"
+          other: "%{model}: сохранение не удалось из-за %{count} ошибки"
 
         # Первый параграф сообщения об ошибке. Можно использовать макрос %{count}
         #
