Template for errors

--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -48,3 +48,15 @@ ru:
       odd: "может иметь лишь четное значение"
       even: "может иметь лишь нечетное значение"
       record_invalid: "Возникли ошибки: %{errors}"
+
+    template:
+      # Заголовок сообщения об ошибке
+      header:
+        one:   "%{model}: сохранение не удалось из-за %{count} ошибки"
+        few:   "%{model}: сохранение не удалось из-за %{count} ошибок"
+        many:  "%{model}: сохранение не удалось из-за %{count} ошибок"
+        other: "%{model}: сохранение не удалось из-за %{count} ошибки"
+
+      # Первый параграф сообщения об ошибке. Можно использовать макрос %{count}
+      # The variable :count is also available
+      body: "Проблемы возникли со следующими полями:"
