rails 3 additions (without tests so far)

--- a/lib/russian/locale/datetime.yml
+++ b/lib/russian/locale/datetime.yml
@@ -25,8 +25,8 @@ ru:
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
     month_names: [~, января, февраля, марта, апреля, мая, июня, июля, августа, сентября, октября, ноября, декабря]
     standalone_month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
-    abbr_month_names: [~, янв., февр., марта, апр., мая, июня, июля, авг., сент., окт., нояб., дек.]
-    standalone_abbr_month_names: [~, янв., февр., март, апр., май, июнь, июль, авг., сент., окт., нояб., дек.]
+    abbr_month_names: [~, янв., фев., мар., апр., мая, июня, июля, авг., сен., окт., ноя., дек.]
+    standalone_abbr_month_names: [~, янв., фев., март, апр., май, июнь, июль, авг., сен., окт., ноя., дек.]
     
     # Порядок компонентов даты для хелперов
     #
