--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -12,7 +12,9 @@ ru:
       delimiter: " "
       # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
       precision: 3
-      
+      significant: false
+      strip_insignificant_zeros: false
+
     # Used in number_to_currency()
     currency:
       format:
@@ -26,14 +28,16 @@ ru:
         separator: "."
         delimiter: " "
         precision: 2
-        
+        significant: false
+        strip_insignificant_zeros: false
+
     # Used in number_to_percentage()
     percentage:
       format:
         # These three are to override number.format and are optional
         # separator: 
         delimiter: ""
-        
+
     # Used in number_to_precision()
     precision:
       format:
@@ -41,7 +45,7 @@ ru:
         # separator:
         delimiter: ""
         # precision:
-        
+
     # Used in number_to_human_size()
     human:
       format:
@@ -49,10 +53,12 @@ ru:
         # separator: 
         delimiter: ""
         precision: 1
-      
+        significant: true
+        strip_insignificant_zeros: true
+
       # Rails 2.2
       # storage_units: [байт, КБ, МБ, ГБ, ТБ]
-      
+
       # Rails 2.3
       storage_units:
         # Storage units output formatting.
@@ -68,6 +74,30 @@ ru:
           mb: "МБ"
           gb: "ГБ"
           tb: "ТБ"
+      decimal_units:
+        format: "%n %u"
+        # Decimal units output formatting
+        # By default we will only quantify some of the exponents
+        # but the commented ones might be defined or overridden
+        # by the user.
+        units:
+          # femto: Quadrillionth
+          # pico: Trillionth
+          # nano: Billionth
+          # micro: Millionth
+          # mili: Thousandth
+          # centi: Hundredth
+          # deci: Tenth
+          unit: ""
+          # ten:
+          #   one: Ten
+          #   other: Tens
+          # hundred: Hundred
+          thousand: 'Тысяч'
+          million: 'Миллионов'
+          billion: 'Триллионов'
+          trillion: 'Миллиардов'
+          quadrillion: 'Квадрильонов'
 
   # Используется в хелперах distance_of_time_in_words(), distance_of_time_in_words_to_now(), time_ago_in_words()
   #
@@ -160,3 +190,12 @@ ru:
     select:
       # default value for :prompt => true in FormOptionsHelper
       prompt: "Выберите: "
+
+  helpers:
+    select:
+      # default value for :prompt => true in FormOptionsHelper
+      prompt: "Выберите: "
+    submit:
+      create: 'Создать %{model}'
+      update: 'Изменить %{model}'
+      submit: 'Сохранить %{model}'
