--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -1,6 +1,7 @@
 ru:
   # Сообщения об ошибке (валидации)
   errors:
+    format: "%{attribute} %{message}"
     # Для всех сообщений доступны макросы %{model}, {{attribute}}, {{value}}.
     # Для некоторых доступен макрос %{count} -- в этом случае можно задать несколько вариантов
     # сообщения (плюрализация)
@@ -37,7 +38,6 @@ ru:
         few:   "неверной длины (может быть длиной ровно %{count} символа)"
         many:  "неверной длины (может быть длиной ровно %{count} символов)"
         other: "неверной длины (может быть длиной ровно %{count} символа)"
-      taken: "уже существует"
       not_a_number: "не является числом"
       not_an_integer: "должен быть целым"
       greater_than: "может иметь лишь значение большее %{count}"
@@ -47,7 +47,6 @@ ru:
       less_than_or_equal_to: "может иметь значение меньшее или равное %{count}"
       odd: "может иметь лишь четное значение"
       even: "может иметь лишь нечетное значение"
-      record_invalid: "Возникли ошибки: %{errors}"
 
     template:
       # Заголовок сообщения об ошибке
