--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -34,10 +34,10 @@ ru:
         many:  "недостаточной длины (не может быть меньше %{count} символов)"
         other: "недостаточной длины (не может быть меньше %{count} символа)"
       wrong_length:
-        one:   "неверной длины (может быть длиной ровно %{count} символ)"
-        few:   "неверной длины (может быть длиной ровно %{count} символа)"
-        many:  "неверной длины (может быть длиной ровно %{count} символов)"
-        other: "неверной длины (может быть длиной ровно %{count} символа)"
+        one:   "неверной длины (должен быть длиной ровно %{count} символ)"
+        few:   "неверной длины (должен быть длиной ровно %{count} символа)"
+        many:  "неверной длины (должен быть длиной ровно %{count} символов)"
+        other: "неверной длины (должен быть длиной ровно %{count} символа)"
       not_a_number: "не является числом"
       not_an_integer: "должен быть целым"
       greater_than: "может иметь лишь значение большее %{count}"
