Слово "Поле" добавлено

--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -1,7 +1,7 @@
 ru:
   # Сообщения об ошибке (валидации)
   errors:
-    format: "%{attribute} %{message}"
+    format: "Поле %{attribute} %{message}"
     # Для всех сообщений доступны макросы %{model}, {{attribute}}, {{value}}.
     # Для некоторых доступен макрос %{count} -- в этом случае можно задать несколько вариантов
     # сообщения (плюрализация)
