--- a/lib/russian/locale/datetime.yml
+++ b/lib/russian/locale/datetime.yml
@@ -32,7 +32,11 @@ ru:
     #
     #
     # Used in date_select and datime_select.
-    order: [ :day, :month, :year ]
+    order:
+      - :day
+      - :month
+      - :year
+    
 
   time:
     # Форматы времени
