--- a/lib/russian/locale/datetime.yml
+++ b/lib/russian/locale/datetime.yml
@@ -14,18 +14,19 @@ ru:
       long: "%d %B %Y"
     
     # Названия дней недели -- контекстные и отдельностоящие
-    day_names: [воскресенье, понедельник, вторник, среда, четверг, пятница, суббота]
+    common_day_names: [воскресенье, понедельник, вторник, среда, четверг, пятница, суббота]
     standalone_day_names: [Воскресенье, Понедельник, Вторник, Среда, Четверг, Пятница, Суббота]
-    abbr_day_names: [Вс, Пн, Вт, Ср, Чт, Пт, Сб]
+    common_abbr_day_names: [Вс, Пн, Вт, Ср, Чт, Пт, Сб]
+    standalone_abbr_day_names: [вс, пн, вт, ср, чт, пт, сб]
 
     # Названия месяцев -- сокращенные и полные, плюс отдельностоящие.
     # Не забудьте nil в начале массиве (~)
     # 
     #
     # Don't forget the nil at the beginning; there's no such thing as a 0th month
-    month_names: [~, января, февраля, марта, апреля, мая, июня, июля, августа, сентября, октября, ноября, декабря]
+    common_month_names: [~, января, февраля, марта, апреля, мая, июня, июля, августа, сентября, октября, ноября, декабря]
     standalone_month_names: [~, Январь, Февраль, Март, Апрель, Май, Июнь, Июль, Август, Сентябрь, Октябрь, Ноябрь, Декабрь]
-    abbr_month_names: [~, янв., февр., марта, апр., мая, июня, июля, авг., сент., окт., нояб., дек.]
+    common_abbr_month_names: [~, янв., февр., марта, апр., мая, июня, июля, авг., сент., окт., нояб., дек.]
     standalone_abbr_month_names: [~, янв., февр., март, апр., май, июнь, июль, авг., сент., окт., нояб., дек.]
     
     # Порядок компонентов даты для хелперов
