--- a/lib/russian/locale/actionview.yml
+++ b/lib/russian/locale/actionview.yml
@@ -21,8 +21,8 @@ ru:
         # Формат отображения валюты и обозначение самой валюты
         #
         #
-        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
         format: "%n %u"
+        negative_format: "-%n %u"
         unit: "руб."
         # These three are to override number.format and are optional
         separator: "."
