Fix for spelling

--- a/lib/russian/locale/activerecord.yml
+++ b/lib/russian/locale/activerecord.yml
@@ -40,7 +40,7 @@ ru:
           other: "неверной длины (может быть длиной ровно %{count} символа)"
         taken: "уже существует"
         not_a_number: "не является числом"
-        greater_than: "может иметь лишь значение большее %{count}"
+        greater_than: "может иметь лишь значение больше %{count}"
         greater_than_or_equal_to: "может иметь лишь значение большее или равное %{count}"
         equal_to: "может иметь лишь значение, равное %{count}"
         less_than: "может иметь лишь значение меньшее чем %{count}"
