--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -28,7 +28,7 @@ ru:
       taken: "уже существует"
       not_a_number: "не является числом"
       not_an_integer: "не является целым числом"
-      greater_than: "может иметь значение большее %{count}"
+      greater_than: "может иметь значение больше %{count}"
       greater_than_or_equal_to: "может иметь значение большее или равное %{count}"
       equal_to: "может иметь лишь значение, равное %{count}"
       less_than: "может иметь значение меньшее чем %{count}"
