--- a/README.textile
+++ b/README.textile
@@ -4,6 +4,7 @@ h1. rs_russian
 h3. Это форк с вытянутыми pull-реквестами, которые мы хотели использовать.
 
 Нравится -- пользуйтесь, не нравится -- идите на страницу оригинала: "http://github.com/yaroslav/russian/":http://github.com/yaroslav/russian/
+Jruby и Rubinius не тестируются и скорее всего не работают т.к. нам они не нужны.
 
 Поддержка русского языка для Ruby и Rails при помощи библиотеки I18n.
 
