--- a/README.textile
+++ b/README.textile
@@ -64,14 +64,12 @@ h1. Использование
 
 Предыдущие версии Russian форсированно выставляли локаль I18n по умолчанию в @:ru@ (Русский язык), от этого решено было отказаться: в Rails стало неудобно работать с мультиязычными приложениями, так как конструкция вида @config.i18n.default_locale = :en@ не работала. Теперь для использования русского языка в Rails по умолчанию нужно использовать строку
 
-<pre><code>
-config.i18n.default_locale = :ru
+<pre><code>config.i18n.default_locale = :ru
 </code></pre>
 
 в @config/application.rb@. Для использования Russian отдельно от Rails можно выставить локаль I18n в русскую по умолчанию или для текущего треда, соответственно:
 
-<pre><code>
-I18n.default_locale = :ru
+<pre><code>I18n.default_locale = :ru
 
 I18n.locale = :ru
 </code></pre>
@@ -153,8 +151,7 @@ h3. Параметризация строк
 
 Пример:
 
-<pre><code>
-class Person
+<pre><code>class Person
   def to_param
     "#{id}-#{name.parameterize}"
   end
@@ -164,8 +161,7 @@ end
 # => #<Person id: 1, name: "Дональд Кнут">
 
 <%= link_to(@person.name, person_path(@person)) %>
-# => <a href="/person/1-donald-knut">Дональд Кнут</a>
-</code></pre>
+# => <a href="/person/1-donald-knut">Дональд Кнут</a></code></pre>
 
 _NB:_ Для простоты иногда проще воспользоваться методом @Russian::transliterate@ напрямую (чтобы не зависеть от текущей локали).
 
@@ -177,73 +173,59 @@ h2. Примеры и справка по переводам (I18n)
 
 h2. Вспомогательные методы модуля Russian
 
-<pre><code>
-Russian.locale
-Russian::LOCALE
-</code></pre>
+<pre><code>Russian.locale
+Russian::LOCALE</code></pre>
 
 -- возвращает локаль русского языка (@:'ru'@).
 
-<pre><code>
-Russian::init_i18n
-</code></pre>
+<pre><code>Russian::init_i18n</code></pre>
 
 -- инициализация Russian. Добавление русских переводов в путь загрузки, включение модулей для плюрализации и транслитерации и перегрузка I18n.
 
 _NB:_ Выполняется автоматически при загрузке.
 
-<pre><code>
-Russian::translate
-Russian::t
-</code></pre>
+<pre><code>Russian::translate
+Russian::t</code></pre>
 
 -- прокси для метода @translate@ I18n, форсирует использование русской локали.
 
-<pre><code>
-Russian::localize
-Russian::l
-</code></pre>
+<pre><code>Russian::localize
+Russian::l</code></pre>
 
 -- прокси для метода @localize@ I18n, форсирует использование русской локали.
 
-<pre><code>
-Russian::strftime
+<pre><code>Russian::strftime
 
 Russian::strftime(Time.now)
 => "Пн, 01 сент. 2008, 11:12:43 +0300"
 Russian::strftime(Time.now, "%d %B")
 >> "01 сентября"
 Russian::strftime(Time.now, "%B")
-=> "Сентябрь"
-</code></pre>
+=> "Сентябрь"</code></pre>
 
 -- @strftime@ с форсированием русской локали (упрощенный вариант @localize@)
 
-<pre><code>
-Russian::pluralize
+<pre><code>Russian::pluralize
 Russian::p
 
 Russian.p(1, "вещь", "вещи", "вещей")
 => "вещь"
-Russian.p(2, "вещь", "вещи", "вещей")
-=> "вещи"
+Russian.p(2, "%n вещь", "%n вещи", "%n вещей")
+=> "2 вещи"
 Russian.p(10, "вещь", "вещи", "вещей")
 => "вещей"
 Russian.p(3.14, "вещь", "вещи", "вещей", "вещи") # последний вариант используется для дробных величин
-=> "вещи"
-</code></pre>
+=> "вещи"</code></pre>
 
 -- упрощенная (без использования хешей I18n) плюрализация для русского языка
 
-<pre><code>
-Russian::transliterate
+<pre><code>Russian::transliterate
 Russian::translit
 
 Russian.translit("рубин")
 => "rubin"
 Russian.translit("Hallo Юлику Тарханову")
-=> "Hallo Yuliku Tarhanovu"
-</code></pre>
+=> "Hallo Yuliku Tarhanovu"</code></pre>
 
 -- транслитерация русских букв в строке.
 
