--- a/README.textile
+++ b/README.textile
@@ -42,6 +42,10 @@ h1. Установка
 
 <pre><code>gem 'rs_russian', '~> 0.7.0'</code></pre>
 
+или
+
+<pre><code>gem "rs_russian", :github => "rs-pro/russian", :branch => "master"</code></pre>
+
 И установите gem в проект с помощью bundler:
 
 @bundle install@ или @bundle update@.
