Fix message for "confirmation"

--- a/lib/russian/locale/activemodel.yml
+++ b/lib/russian/locale/activemodel.yml
@@ -6,7 +6,7 @@ ru:
       inclusion: "имеет непредусмотренное значение"
       exclusion: "имеет зарезервированное значение"
       invalid: "имеет неверное значение"
-      confirmation: "не совпадает с подтверждением"
+      confirmation: "не совпадает с подтверждаемым значением"
       accepted: "нужно подтвердить"
       empty: "не может быть пустым"
       blank: "не может быть пустым"
